chore: catchup-server 컨테이너 재시작 설정 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     depends_on:
       - db
       - meilisearch
+    restart: on-failure
 
   meilisearch:
     container_name: meilisearch
