--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,13 @@ dependencies {
 	// MeiliSearch
 	implementation 'com.meilisearch.sdk:meilisearch-java:0.16.1'
 
-    //WebClient
+    // WebClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
