--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,10 @@ spring:
       hibernate:
         format_sql: true
 
+  jwt:
+    secret: ${JWT_SECRET}
+    access_expiration: ${JWT_ACCESS_EXPIRATION}
+
 meilisearch:
   url: ${MEILISEARCH_URL}
   api-key: ${MEILISEARCH_MASTER_KEY}
