--- a/.github/workflows/catchup-spring-cicd.yml
+++ b/.github/workflows/catchup-spring-cicd.yml
@@ -52,6 +52,8 @@ jobs:
             git clone "https://github.com/TeamCatchUp/CatchUp-BE.git"
             cd CatchUp-BE
             
+            git checkout deploy/https-setup
+            
             echo "Pulling new image..."
             docker pull ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_IMAGE_NAME }}:${{ needs.build.outputs.image_tag }}
                       
