chore: 도커 이미지 정리 스크립트 수정

--- a/.github/workflows/catchup-spring-cicd.yml
+++ b/.github/workflows/catchup-spring-cicd.yml
@@ -69,7 +69,7 @@ jobs:
             docker compose up -d
             
             echo "Pruning old images..."
-            docker image prune -f
+            docker image prune -a -f
             
             echo "Done. Check container status below."
             docker ps
