feat: 프론트 배포 도메인 CORS 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -168,6 +168,7 @@ rag:
 # Custom App Config
 # ============================================
 app:
+  frontend-domain: ${FRONTEND_DOMAIN:http://localhost:3000}
   base-url: ${SPRING_SERVER_BASE_URL:http://localhost:8080}
   oauth2:
     # 기본값은 로컬용, 배포 시 환경변수 OAUTH_REDIRECT_URI로 덮어쓰기
