--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,7 +83,8 @@ logging:
 # ============================================
 jwt:
   secret: ${JWT_SECRET}
-  access_expiration: ${JWT_ACCESS_EXPIRATION:3600000}
+  access_expiration: ${JWT_ACCESS_EXPIRATION:3600000} # 1시간
+  refresh_expiration: ${JWT_REFRESH_EXPIRATION:604800000} # 7일
 
 # ============================================
 # MeiliSearch
