--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
               - email
               - profile
   # ============================================
-  # Database - MySQL
+  # Database - PostgreSQL
   # ============================================
   datasource:
     driver-class-name: org.postgresql.Driver
