feat: Meilisearch 동기화 로직 DB 기반으로 변경 및 OPENAI Embedder 설정 추가
- Meilisearch 인덱싱 대상: 외부 API 응답 -> DB Entity로 변경
- IssueMetadata에 description 필드 추가 및 Document 매핑
- 인덱스 미존재 시 자동 생성 및 OpenAI 임베더 설정 로직 추가
- 프로젝트 키(예: CU) 기반 동적 인덱스 네이밍 적용 (예: cu_jira_issue)
- 기존 EventListener 기반 동기화 로직 주석 처리 (추후 Worker에 위임)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -180,6 +180,13 @@ rag:
     max-in-memory-size: 2097152
 
 # ============================================
+# (임시) OpenAI
+# ============================================
+openai:
+  api:
+    key: ${OPENAI_API_KEY}
+
+# ============================================
 # Custom App Config
 # ============================================
 app:
