--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,21 @@ services:
       - db
     restart: on-failure
 
+  redis:
+    container_name: redis
+    image: redis
+    env_file:
+      - .env
+    ports:
+      - "6379:6379"
+    networks:
+      - db-network
+    volumes:
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
+      - ./redis_data:/data
+    command: redis-server /usr/local/etc/redis/redis.conf
+    restart: always
+
 networks:
   db-network:
 
