chore: samesite 설정 환경변수 치환

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -92,7 +92,7 @@ jwt:
   cookie:
     secure: ${JWT_COOKIE_SECURE}
     domain: ${JWT_COOKIE_DOMAIN}
-    same-site: Lax
+    same-site: ${JWT_COOKIE_SAMESITE:Lax}
 
 # ============================================
 # MeiliSearch
