deploy: develop 브랜치 push 시 즉시 배포되도록 변경(협업)

--- a/.github/workflows/catchup-spring-cicd.yml
+++ b/.github/workflows/catchup-spring-cicd.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches:
       - 'release/**'
-      - 'main'
+      - main
+      - develop
   pull_request:
     branches:
       - main
-      - develop
 
 jobs:
   build:
