--- a/.github/workflows/catchup-spring-cicd.yml
+++ b/.github/workflows/catchup-spring-cicd.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     name: Build and Push Docker Image
+    if: github.repository_owner == 'TeamCatchUp'
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ github.sha }}
@@ -33,7 +34,7 @@ jobs:
     name: Deploy to EC2 Server
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name != 'pull_request'
+    if: github.repository_owner == 'TeamCatchUp' && github.event_name != 'pull_request'
 
     steps:
       - name: Deploy to EC2
